[project]
name = "ai-agents-kaggle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.5"
dependencies = [
    "alembic>=1.17.2",
    "black>=25.11.0",
    "fastapi>=0.121.2",
    "fastmcp>=2.13.1",
    "google-adk>=1.18.0",
    "ipython>=9.7.0",
    "mypy>=1.18.2",
    "psycopg2>=2.9.11",
    "ruff>=0.14.6",
    "sqlalchemy>=2.0.44",
]
